--- a/frontend/src/app/components/list/list.component.html
+++ b/frontend/src/app/components/list/list.component.html
@@ -1,7 +1,9 @@
 <div>
   <br>
   <mat-card>
-    <h3>Product List Page</h3>
+    <section class="mat-typography">
+      <h3>Product List Page</h3>
+    </section>
     <div class="example-button-row">
     <span class="pr-10">
     <button mat-raised-button color="primary" routerLink="/create">Create</button>
