--- a/frontend/src/app/components/not-found/not-found.component.html
+++ b/frontend/src/app/components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="not-found">
   <div class="text-center">
-    <h1>Ups! Page not found</h1>
+    <h1>Ooups! Page not found</h1>
     <a [routerLink]="['/list']"><button mat-button>Return start page</button></a>
     <br><br>
     <p>Automatically go to the list page within 10 seconds</p>
